--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <main>
         <section id="main-content">
-            <h1 id="introduction">I'M PRINCE - A WEB DEVELOPER</h1>
+            <h1 id="introduction">I'M PRINCE - GAME DEVELOPER</h1>
             <p class="intro-text">Welcome to my digital space where I showcase my skills, aspirations, and achievements. Explore and know more about me!</p>
         </section>
 
